# splinter

./: CMakeLists.txt  README.md
images/: excalidraw-prompts.md
include/: memcury.h
src/: main.cpp
src/engine/: engine.cpp  engine.h
src/engine/analyzer/: analyzers.cpp  bytecodeAnalyzer.h  classAnalyzer.h  fieldAnalyzer.h  methodAnalyzer.h
src/engine/bytecode/: bytecodePrinter.cpp  bytecodePrinter.h  bytecodeTable.cpp  bytecodeTable.h
src/engine/classfile/: accessFlags.h  descriptorParser.cpp  descriptorParser.h  signatureParser.cpp  signatureParser.h
src/engine/hotspot/: arrayKlass.h  classLoaderData.cpp  classLoaderData.h  constMethod.cpp  constMethod.h  constantPool.cpp  constantPool.h  constantPoolCache.cpp  constantPoolCache.h  fieldInfo.cpp  fieldInfo.h  instanceKlass.cpp  instanceKlass.h  klass.cpp  klass.h  method.cpp  method.h  symbolTable.cpp  symbolTable.h  vmConstants.cpp  vmConstants.h  vmStructs.cpp  vmStructs.h  vmTypes.cpp  vmTypes.h
src/engine/memory/: moduleMap.cpp  moduleMap.h  processMemory.cpp  processMemory.h  remoteProcess.cpp  remoteProcess.h
